<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName="com.example.myfirstapp.MainUserActivity"
    tools:context="com.example.deyana.waterme_v01.EditPlantActivity">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/edit_plant_title"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_plant_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/plants_species"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editPlantSpeciesField"
        app:layout_constraintEnd_toStartOf="@+id/editPlantSpeciesField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPlantSpeciesField"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/days_between_watering"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDaysBetweenWateringField"
        app:layout_constraintEnd_toStartOf="@+id/editDaysBetweenWateringField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editDaysBetweenWateringField"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editPlantSpeciesField" />

    <Button
        android:id="@+id/saveChangesButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="attempt_saveChanges"
        android:text="@string/save_changes"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/save_changes" />

</android.support.constraint.ConstraintLayout>
